# cookiecutters

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit-autoupdate.yml
c/clang-format/{{cookiecutter.path}}/: .clang-format
c/cmake/{{cookiecutter.path}}/: CMakeLists.txt
c/cmake/{{cookiecutter.path}}/src/: CMakeLists.txt
direnv/pip/: cookiecutter.json
direnv/pip/{{cookiecutter.path}}/: .envrc
direnv/poetry/{{cookiecutter.path}}/: .envrc
projects/python/: cookiecutter.json
projects/python/hooks/: post_gen_project.py  pre_gen_project.py
projects/python/{{cookiecutter.project_name}}/: .envrc  .pre-commit-config.yaml  _gitignore  cookiecutter_configs.json  pyproject.toml  tasks.py
python/_basic/hooks/: post_gen_project.py
python/_basic/{{cookiecutter.project_slug}}/: tasks.py  tools_pyproject.toml
python/basic/: cookiecutter.json
python/basic/hooks/: post_gen_project  post_gen_project.py
python/basic/{{cookiecutter.project_slug}}/: .envrc  .pre-commit-config.yaml  base_pyproject.toml  setup.cfg  tasks.py  tools_pyproject.toml
python/basic/{{cookiecutter.project_slug}}/src/: main.py
python/basic/{{cookiecutter.project_slug}}/tests/: example_test.py
python/basic_poetry/{{cookiecutter.project_slug}}/: tasks.py
python/black/{{cookiecutter.path}}/: _pyproject_snippet.toml
python/build-system/hooks/: post_gen_project.py
python/devdeps/: cookiecutter.json
python/devdeps/hooks/: post_gen_project.py
python/devdeps/{{cookiecutter.path}}/: _pyproject_snippet.toml  install_devdeps.py  requirements-dev.in  requirements-dev.txt
python/direnv/: cookiecutter.json
python/direnv/hooks/: post_gen_project.py
python/direnv/{{cookiecutter.path}}/: .envrc
python/dockerfile/: cookiecutter.json
python/dockerfile/{{cookiecutter.path}}/: Dockerfile
python/editorconfig/{{cookiecutter.path}}/: .editorconfig
python/hello_world/{{cookiecutter.path}}/: main.py
python/invoke/format/: cookiecutter.json
python/invoke/format/{{cookiecutter.path}}/: _tasks_snippet.py
python/invoke/lint/: cookiecutter.json
python/invoke/lint/hooks/: post_gen_project.py
python/invoke/lint/{{cookiecutter.path}}/: _tasks_snippet.py
python/invoke/run/: cookiecutter.json
python/invoke/run/hooks/: post_gen_project.py
python/invoke/run/simple/: cookiecutter.json
python/invoke/run/{{cookiecutter.path}}/: _tasks_snippet.py  tasks.py
python/invoke/tests/{{cookiecutter.path}}/: _tasks_snippet.py
python/invoke/utils/hooks/: post_gen_project.py
python/invoke/utils/{{cookiecutter.path}}/: _tasks_snippet.py
python/isort/{{cookiecutter.path}}/: _pyproject_snippet.toml
python/makefile/: cookiecutter.json
python/makefile/{{cookiecutter.path}}/: Makefile
python/mypy/: cookiecutter.json
python/mypy/{{cookiecutter.path}}/: _pyproject_snippet.toml
python/pre-commit/: cookiecutter.json
python/pre-commit/hooks/: post_gen_project.py
python/pre-commit/{{cookiecutter.path}}/: .pre-commit-config.yaml
python/project-setup/: cookiecutter.json
python/project-setup/{{cookiecutter.path}}/: _pyproject_snippet.toml
python/pyproject/build-system/: cookiecutter.json
python/pyproject/build-system/{{cookiecutter.path}}/: _pyproject_snippet.toml
python/ruff/: cookiecutter.json
python/ruff/{{cookiecutter.path}}/: _pyproject_snippet.toml
python/tests/hooks/: post_gen_project.py
python/tests/{{cookiecutter.path}}/: _pyproject_snippet.toml
python/vulture/: cookiecutter.json
python/vulture/hooks/: post_gen_project.py
python/vulture/{{cookiecutter.path}}/: _pyproject_snippet.toml
tasks/: __init__.py  utils.py
tasks/projects/: __init__.py  _core.py  python.py
templates/python/basic/{{cookiecutter.project_slug}}/: tools_pyproject.toml
