[tool.poetry]
name = "cookiecutters"
version = "0.1.0"
description = ""
authors = ["Emerson Max de Medeiros Silva <emersonmx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
cookiecutter = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"
ipdb = "^0.13.9"
invoke = "^1.7.1"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pyupgrade = "^2.37.2"
add-trailing-comma = "^2.2.3"
yesqa = "^1.3.0"
isort = "^5.10.1"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-print = "^5.0.0"
pep8-naming = "^0.13.1"
mypy = "^0.971"
types-invoke = "^1.7.3"
vulture = "^2.5"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3

[tool.black]
line-length = 80

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "cookiecutter.*"
ignore_missing_imports = true

[tool.vulture]
min_confidence = 100
