[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutters"
version = "0.1.0"
authors = [
    { name = "Emerson Max de Medeiros Silva", email = "emersonmx@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "cookiecutter==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-randomly",
    "coverage",
    "ipdb",
    "invoke",
    "pre-commit",
    "pre-commit-hooks",
    "pyupgrade",
    "add-trailing-comma",
    "yesqa",
    "isort",
    "black",
    "flake8",
    "flake8-print",
    "pep8-naming",
    "mypy",
    "types-invoke",
    "vulture",
    "bandit",
]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.black]
line-length = 79

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "cookiecutter.*"
ignore_missing_imports = true
