[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutters"
version = "0.1.0"
authors = [
    { name = "Emerson Max de Medeiros Silva", email = "emersonmx@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "cookiecutter==2.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-randomly",
    "coverage",
    "ipdb",
    "invoke",
    "pre-commit",
    "pre-commit-hooks",
    "pyupgrade",
    "add-trailing-comma",
    "yesqa",
    "isort",
    "black",
    "flake8",
    "flake8-print",
    "pep8-naming",
    "mypy",
    "types-invoke",
    "vulture",
    "bandit",
]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.black]
line-length = 79
