[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = ""
pytest-randomly = ""
coverage = ""
ipdb = ""
invoke = ""
pre-commit = ""
pre-commit-hooks = ""
pyupgrade = ""
add-trailing-comma = ""
yesqa = ""
isort = ""
black = ""
flake8 = ""
flake8-print = ""
pep8-naming = ""
mypy = ""
types-invoke = ""
vulture = ""
bandit = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3

[tool.black]
line-length = 80

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
no_implicit_optional = true
show_error_codes = true
strict_concatenate = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.vulture]
min_confidence = 100
